--- a/cyclope/media/themes/neutronix/css/jcarousel.less
+++ b/cyclope/media/themes/neutronix/css/jcarousel.less
@@ -1,98 +1,39 @@
 /*
-# Cyclope3 Neutrona Workflow Design
-# Theme: Neutrona 
-# Layout: 5 Elements
-# Development: CodigoSur www.codigosur.org
-# Official web site Cyclope3 GPL: http://cyclope.codigosur.org
-# Official Trac Cyclope3 GPL: http://codigo.cyclope.ws
-# jCarousel based http://sorgalla.com/jcarousel
-# Less CSS based www.lesscss.org
-# 960 Grid System Based www.960.gs
-# Copyright 2010-2012 Codigo Sur Sociedad Civil
+# Cyclope 3 GPL
+# Neutronix Workflow Design
+# Layouts: 4 & 5 Elements
+# Copyright 2010-2012 CodigoSur - SociedadCivil
 # All rights reserved.
-# This file is part of Cyclope3.
+# This file is part of Cyclope 3.
 # Cyclope is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation, either version 3 of the License, or
 # (at your option) any later version.
-*/
+# Development: Codigo Sur www.codigosur.org
+# Less CSS based www.lesscss.org
+# 960 Grid System Based www.960.gs
+# jCarousel based http://sorgalla.com/jcarousel
+# Neutronix is developed by Santiago Hoerth Moura
 
-
-/*-----------------------------------------
+/*------------------
 DEFAULTS
-------------------------------------------*/
+-------------------*/
 
 .jcarousel-skin-cyclope .jcarousel-container {
     background: @colora;
     margin-bottom: 20px;}
 
-.jcarousel-skin-cyclope .jcarousel-direction-rtl {
-    direction: rtl;}
-
-.jcarousel-skin-cyclope .jcarousel-container-horizontal {
-    width: 550px;
-    padding: 0;}
-
-/*
-.jcarousel-skin-cyclope .jcarousel-container-vertical {
-}
-*/
-
-.jcarousel-skin-cyclope .jcarousel-clip {
-    overflow: hidden;
-    width: 550px;}
-
-.slideshow .jcarousel-skin-cyclope .jcarousel-clip {
-    height: 210px;}
-
-.slideshow-background .jcarousel-skin-cyclope .jcarousel-clip {
-    height: 330px;}
-
-.jcarousel-skin-cyclope .jcarousel-clip-horizontal {
-  }
-
-/*
-.jcarousel-skin-cyclope .jcarousel-clip-vertical {
-}
-*/
-
-.jcarousel-skin-cyclope .jcarousel-item {
-    width: 550px;
-    padding:0;
-    margin:0;}
-
-.slideshow .jcarousel-skin-cyclope .jcarousel-item {
-    height: 210px;}
-
-.slideshow-background .jcarousel-skin-cyclope .jcarousel-item {
-    height: 330px;}
-
-.jcarousel-skin-cyclope .jcarousel-item-horizontal {
-    margin-left: 0;
-    margin: 0;}
-
-/*
-#fire .jcarousel-skin-cyclope .jcarousel-direction-rtl .jcarousel-item-horizontal {
-    margin: 0;
-	margin-left: 20px;
-    margin-right: 0;
-}
-*/
-
-/*
-.jcarousel-skin-cyclope .jcarousel-item-vertical {
-    margin-bottom: 10px;
-}
-*/
-
-.jcarousel-skin-cyclope .jcarousel-item-placeholder {
-  background: @color-alpha;
-  color: @color-omega;}
-
-
-/*-----------------------------------------
+/*------------------
 HORIZONTAL BUTTONS
-------------------------------------------*/
+-------------------*/
+
+/* ******** NEXT BUTTON ******** */
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 90px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-next-horizontal {
+    top: 140px;}
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal {
   position: absolute;
@@ -101,12 +42,6 @@ HORIZONTAL BUTTONS
   height: 32px;
   cursor: pointer;
   background: transparent url(../images/jcarousel/next-horizontal-right.png) no-repeat 0 0;}
-
-.slideshow .jcarousel-skin-cyclope .jcarousel-next-horizontal {
-    top: 90px;}
-
-.slideshow-background .jcarousel-skin-cyclope .jcarousel-next-horizontal {
-    top: 140px;}
 
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:hover,
 .jcarousel-skin-cyclope .jcarousel-next-horizontal:focus {
@@ -122,6 +57,14 @@ HORIZONTAL BUTTONS
   cursor: default;
   background-position: -96px 0;}
 
+/* ******** PREV BUTTON ******** */
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 90px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
+    top: 140px;}
+
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
   position: absolute;
   left: 0px;
@@ -130,12 +73,6 @@ HORIZONTAL BUTTONS
   cursor: pointer;
   background: transparent url(../images/jcarousel/prev-horizontal-left.png) no-repeat 0 0;}
 
-.slideshow .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
-    top: 90px;}
-
-.slideshow-background .jcarousel-skin-cyclope .jcarousel-prev-horizontal {
-    top: 140px;}
-    
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:hover, 
 .jcarousel-skin-cyclope .jcarousel-prev-horizontal:focus {
     background-position: -32px 0;
@@ -151,72 +88,23 @@ HORIZONTAL BUTTONS
   cursor: default;
   background-position: -96px 0;}
 
-/**
- *  Vertical Buttons
- */
 
-/* not implemented in cyclope */
-
-/*
-.jcarousel-skin-cyclope .jcarousel-next-vertical {
-    position: absolute;
-    bottom: 5px;
-    left: 43px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/next-vertical.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-next-vertical:focus {
-    background-position: 0 -32px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-vertical:active {
-    background-position: 0 -64px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:focus,
-.jcarousel-skin-cyclope .jcarousel-next-disabled-vertical:active {
-    cursor: default;
-    background-position: 0 -96px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical {
-    position: absolute;
-    top: 5px;
-    left: 43px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    background: transparent url(../images/jcarousel/prev-vertical.png) no-repeat 0 0;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:focus {
-    background-position: 0 -32px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-vertical:active {
-    background-position: 0 -64px;
-}
-
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:hover,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:focus,
-.jcarousel-skin-cyclope .jcarousel-prev-disabled-vertical:active {
-    cursor: default;
-    background-position: 0 -96px;
-}
-*/
-
-
-/*-----------------------------------------
+/*------------------
 MODE STANDAR VIEW
-------------------------------------------*/
+-------------------*/
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-container-horizontal {
+    width: 530px;
+    padding: 10px;
+    .rounded-corners(10px);}
+    
+.slideshow .jcarousel-skin-cyclope .jcarousel-clip {
+    overflow: hidden;
+    width: 530px;
+    height: 210px;}
+
+.slideshow .jcarousel-skin-cyclope .jcarousel-item {
+    height: 210px;}
 
 #spark .slideshow {
   margin: 0;
@@ -266,9 +154,25 @@ MODE STANDAR VIEW
   margin:0 !important;
   display:block !important;}
 
-/*-----------------------------------------
+/*------------------
 MODE IMAGE BACKGROUND VIEW
-------------------------------------------*/
+-------------------*/
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-container-horizontal {
+    width: 530px;
+    padding: 0;}
+
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-clip {
+    overflow: hidden;
+    width: 550px;
+    height: 330px;}
+
+.slideshow-background .jcarousel-skin-cyclope .jcarousel-item {
+    width: 550px;
+    padding:0;
+    margin:0;
+    height: 330px;}
 
 #spark .slideshow-background {
   
@@ -292,7 +196,7 @@ MODE IMAGE BACKGROUND VIEW
   float: left;
   margin: 0;
   padding: 0;
-  width: 510px;}
+  width: 550px;}
 
 #spark .slideshow-background img.type_icon {
   float: left;
@@ -305,10 +209,6 @@ MODE IMAGE BACKGROUND VIEW
 #spark .slideshow-background .teaser_icon_container {
   position: relative;}
 
-#spark .slideshow-background h2.title {
-  margin:0;
-  padding:15px;}
-  
 #spark .slideshow-background .title {
   border: none;
   font-size: 1.2em;
