--- a/cyclope/templates/registration/registration_form.html
+++ b/cyclope/templates/registration/registration_form.html
@@ -2,18 +2,12 @@
 {% load i18n %}
 
 {% block content%}
-
-<div class="user_input">
-<h6>
-  {% trans "Please fill in your user profile data" %}
-</h6>
-<form action="" method="post">{% csrf_token %}
-
+<div class="frontend_login">
+<h4 class="title">{% trans "Please fill in your user profile data" %}</h4>
+<form action="" method="post">
+{% csrf_token %}
 {{ form }}
-<p class="submit">
-  <input type="submit" name="post" class="submit" value="{% trans "Register" %}" />
-</p>
+<p class="submit"><input type="submit" name="post" class="submit" value="{% trans "Register" %}"/></p>
 </form>
 </div>
-
 {% endblock %}
