Fixed some files in Neutronix

--- a/cyclope/media/themes/neutronix/css/fire.less
+++ b/cyclope/media/themes/neutronix/css/fire.less
@@ -984,7 +984,8 @@ COMMENTS
   background:@colord;
   color:@color-alpha;
   margin:0 0 0 3px;
-  border:1px solid @colorc;}
+  border:1px solid @colorc;
+  width:120px;}
 
 #user_comments form input.submit:hover {
   background:@color-omega;}
@@ -1021,8 +1022,7 @@ COMMENTS
 #user_comments {
   width:550px;
   text-align:left;
-  margin:25px 0 0;
-  background-color:@color-alpha;}
+  margin:25px 0 0;}
   
 #user_comments .data {
   color:@color-omega;
@@ -1055,7 +1055,6 @@ COMMENTS
   width:644px;}
   
 #user_comments h6 {
-  background-color:@color-alpha;
   color:@colord;
   margin:0 0 10px 0;
   padding:5px 0;
