--- a/cyclope/media/themes/nonzeroblue/css/cyclope.less
+++ b/cyclope/media/themes/nonzeroblue/css/cyclope.less
@@ -16,7 +16,7 @@
 # Experience is an original design Free CSS Templates 
 # Not delete this comment :)
 */
-
+@import "../../neutronix/css/defaults.less";
 
 /*-----------------------------------------------------------------------------------------------
 GENERALS PARAMETERS
@@ -48,8 +48,8 @@ GENERAL SKEL
 .beta{margin-left:5px}
 .gamma{margin-right:5px}
 .omega{margin-right:0}
-#mascara {background:transparent;}
-#medianera {overflow:auto;background:transparent;padding:0;margin:-40px 0 0;}  
+#mask {background:transparent;}
+#middling {overflow:auto;background:transparent;padding:0;margin:0 0 0;}  
 .two_sidebars #content_container {margin-right: 240px;}
 .pagination {padding:0 10px 0 5px;margin:0 10px;} 
 
@@ -83,7 +83,7 @@ div.paginator a:hover {color:#000;}
 /*-----------------------------------------------------------------------------------------------
 AIR MENU
 -----------------------------------------------------------------------------------------------*/
-#air {width:960px;margin:0 auto;position:relative;background:transparent;top:-80px;}
+#air {width:960px;margin:6px auto 0;position:relative;background:transparent;top:3px;}
 #air .menuitems_hierarchy {position:relative;padding: 0 0;}
 #air .menuitems_hierarchy ul {float:right;list-style: none;} 
 #air .menuitems_hierarchy li  {float:left; margin: 0 0 0 7px;}
@@ -112,23 +112,23 @@ border-top-top-radius:6px;
 #air .menuitems_hierarchy li li li a {padding: 8px 10px;background:#333;}
 #air .menuitems_hierarchy li li li a:hover {background: #000; }
 /*SEARCH BOX*/
-#air .search-box {position:absolute;top:-70px;right:0;}
+#air .search-box {position:absolute;top:65px;right:0;}
 #air .search-box form {margin:0 15px 0 0;padding:5px;float:right;z-index:50;}
 #air .search-box input {padding:5px 3px;margin:0 0 1px 0;border:1px solid #000;color:#000;width:128px;background:#fff;font-size:0.75em}
 #air .search-box input.submit {border:none;padding:3px 0;margin:0 0 0 0;width:25px;height:25px;background:url(../images/css/btn.png) no-repeat;}
 /*-----------------------------------------------------------------------------------------------
 BRAND
 -----------------------------------------------------------------------------------------------*/
-.brand {height:170px;background: url(../images/css/cabezal.gif) 0 0 repeat-x;padding:0;margin:0;}
-.brand h1 {width:960px;margin:0 auto;padding:30px 0 0;text-align:left;font-size:2.3em;}
+.brand {height:170px;background: url(../images/css/cabezal.png) 0 0 repeat-x;padding:0;margin:0;}
+.brand h1 {font-family: Arial, Verdana, Helvetica, Sans-serif;width:960px;margin:0 auto;padding:30px 0 0;text-align:left;font-size:2.3em;}
 .brand h1 a {color:#fff; text-decoration:none;}
 .brand h2 {width:960px;margin:0 auto;font-size:1.1em;font-weight:400;padding:0;}
 .brand h2 a {color:#ccc; text-decoration:none;}
 .brand div {padding:5px 0 0 15px;margin:0;text-align:left;color:#fff;font-size:0.85em;background:#fff;} 
 /*-----------------------------------------------------------------------------------------------
-WATER (sanhoerth: 18 Jun 2011)
+WATER
 -----------------------------------------------------------------------------------------------*/
-#water {position:relative;border-left:1px dotted #cccccc;background:transparent;padding:0;margin:0px;}
+#water {position:relative;border-left:1px dotted #cccccc;background:transparent;padding:0;margin:0px;.rounded-corners(0);}
 #water .content-view {}
 #water .more {font-size:inherit;font-weight:400;margin:0; padding: 0 0;display:inline;}
 #water .pagination  {font-size:0.65em;text-align:center;padding:3px;background:#333;color:#eee;}
@@ -150,17 +150,17 @@ WATER (sanhoerth: 18 Jun 2011)
 #water .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
 #water .category_title .title {padding:10px 0;margin:0 0 10px;display:block;border-bottom:none;font-size:1em;text-align:center;background:#333;color:#fff;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;}
 #water .category_title .title a {color:#fff;}
-#water .staticpage-teaser {border-bottom:3px solid #ccc;padding:0 0 10px;margin:0 0 10px;}
+#water .staticpage-teaser {padding:0 0 10px;margin:0 0 10px;}
 #water .staticpage-teaser ul li h2 {font-size:.9em;margin:0 0 10px;}
 #water .staticpage-teaser ul  {list-style:square;margin:0 15px;}
-#water .staticpage-detail {border-bottom:3px solid #ccc;padding:0 0 10px;margin:0 0 10px;font-size:.8em;}
+#water .staticpage-detail {padding:0 0 10px;margin:0 0 10px;font-size:.8em;}
 #water .menuitems_hierarchy{}
 #water .menuitems_hierarchy span {}
 #water .menuitems_hierarchy ul {margin:0 ; padding:0; list-style:none;display:block;}
-#water .menuitems_hierarchy li {font-size:.9em;margin:0 0 8px;text-decoration:none;font-weight:400;border-bottom:1px solid #eeeeee;padding:0 10px 8px;}
-#water .menuitems_hierarchy li:hover {}
-#water .menuitems_hierarchy li a {text-decoration:none; color:#f16c00; display:block;}
-#water .menuitems_hierarchy li a:hover {text-decoration:none;color:#3f668e;}
+#water .menuitems_hierarchy li {background:transparent;font-size:.9em;margin:0 0 8px;text-decoration:none;font-weight:400;border-bottom:1px solid #eeeeee;padding:0 10px 8px;}
+#water .menuitems_hierarchy li:hover {background:transparent;}
+#water .menuitems_hierarchy li a {text-decoration:none; color:#f16c00; display:block;background:transparent;}
+#water .menuitems_hierarchy li a:hover {text-decoration:none;color:#3f668e;background:transparent;}
 #water .menuitems_hierarchy ul ul {margin:0;padding:0;display:block;border:none;}
 #water .menuitems_hierarchy li li {display:block;padding:3px 3px;margin:4px 0;border:none;border-bottom:1px solid #ccc;}
 #water .menuitems_hierarchy li li a {color:#fff;display:block;border:none;background:none;}
@@ -234,7 +234,7 @@ WATER (sanhoerth: 18 Jun 2011)
 /*-----------------------------------------------------------------------------------------------
 LOVE
 -----------------------------------------------------------------------------------------------*/
-#love {position:relative;border-left:1px dotted #cccccc;background:transparent;padding:0 5px 0 10px;margin:0;}
+#love {position:relative;border-left:1px dotted #cccccc;background:transparent;padding:0 5px 0 10px;margin:0;.rounded-corners(0);}
 #love .content-view {}
 #love .more {font-size:inherit;font-weight:400;margin:0; padding: 0 0;display:inline;}
 #love .pagination  {font-size:0.65em;text-align:center;padding:3px;background:#333;color:#eee;}
@@ -255,7 +255,7 @@ LOVE
 #love .teaser ul {color:#000;font-size:1em;padding:15px 0;margin:0 0 0 30px;list-style:square;}
 #love .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
 
-#love .category_title .title {display:block;color:#999999;font-size:1em !important;border-top:1px dotted #e1e1e1;border-bottom:1px dotted #e1e1e1;padding:4px 0;}
+#love .category_title .title {display:block;color:#999999;font-size:1em !important;border-top:1px dotted #e1e1e1;border-bottom:1px dotted #e1e1e1;padding:4px 0;background:transparent;.rounded-corners(0);}
 #love .category_title .title a {color:inherit;text-decoration:none;}
 #love .category_title .title a:hover {color:#333333;}
 #love #categories_navigation {padding:4px;display:block;float:right;font-weight:400;font-size:.8em;}
@@ -311,7 +311,7 @@ LOVE
 #love div.paginator {font-size:.7em;padding:5px;background:#999;color:#fff;display:block;font-weight:700;text-align:center;margin:0 auto 10px;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
 #love div.paginator a {color:#fff;font-weight:400;text-decoration:underline;}
 #love div.paginator a:hover {color:#000;}
-#love .teaser_list, #love .collection_all_items_teaser_list {margin:0 0 10px;border-bottom:3px solid #ccc;padding:0 0 10px;}
+#love .teaser_list, #love .collection_all_items_teaser_list {margin:0 0 10px;padding:0 0 10px;}
 #love .contact-teaser {border-bottom:1px solid #999;padding:5px 0;margin:0;}
 #love .contact-teaser img.type_icon {display:none;}
 #love .contact-teaser .title {display:inline;margin:0 0 10px 0;color:#000;font-weight:700;font-size:.9em;padding:0;background:none;border:none;}
@@ -376,7 +376,7 @@ DETAILS CONTENTS
 #fire div.paginator {font-size:.7em;padding:5px;background:#999;color:#fff;display:block;font-weight:700;text-align:center;margin:0 auto 10px;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
 #fire div.paginator a {color:#fff;font-weight:400;text-decoration:underline;}
 #fire div.paginator a:hover {color:#000;}
-#fire .staticpage-detail {border-bottom:3px solid #ccc;padding:0 0 10px;margin:0 0 10px;font-size:.8em;}
+#fire .staticpage-detail {padding:0 0 10px;margin:0 0 10px;font-size:.8em;}
 #fire .article-detail {}
 #fire .article-detail a,#fire .staticpage-detail a {color:#000;}
 #fire .related_contents            {font-weight:700;color:#333;background:#eee;padding:10px;margin:0;width:60%;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
@@ -409,7 +409,7 @@ TEASERS
 #fire .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
 #fire .teaser_list, #fire .collection_all_items_teaser_list {margin:0 0 10px;border-bottom:3px solid #ccc;padding:0 0 10px;}
 #fire div.collection_teaser {overflow:auto;background:#eee;display:block;margin:-20px 0 20px;padding:10px;border-bottom:1px solid #666;}
-#fire .staticpage-teaser {border-bottom:3px solid #ccc;padding:0 0 10px;margin:0 0 10px;}
+#fire .staticpage-teaser {padding:0 0 10px;margin:0 0 10px;}
 #fire .staticpage-teaser ul li h2 {font-size:.9em;margin:0 0 10px;}
 #fire .staticpage-teaser ul  {list-style:square;margin:0 15px;}
 #fire .list_as_forum {border-bottom:3px solid #ccc;margin:0 0 10px;}    
@@ -476,7 +476,7 @@ FORMS
 -------------------*/
 #fire form small {font-size:0.7em;padding:5px 0;display:block;}
 #fire form input {padding:2px;width:130px;border-radius:3px;-webkit-border-radius:3px;-moz-border-radius:3px;background:#fff;color:#000;border:1px solid #000;}
-#fire form input.submit {width:30px;background:#666;color:#fff;border:1px solid #000;}
+#fire form input.submit {background:#666;color:#fff;border:1px solid #000;}
 /*-----------------
 SEARCH BOX
 -------------------*/
@@ -565,29 +565,8 @@ FORUMS
 .forum .create_forum input {display:block;}
 .forum .create_forum input {display:block;}
 .forum .create_forum textarea {display:block;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;margin:0 0 10px;}
-/*-----------------------------------------------------------------------------------------------
-COMMENTS
------------------------------------------------------------------------------------------------*/
-#user_comments form input {width:40%;border:1px solid #999;margin:5px 0 15px;}
-#user_comments form input.submit {width:auto;background:#ccc;color:#000;margin:0 0 0 3px;border:1px solid #999;box-shadow:2px 2px 5px #666;-webkit-box-shadow:2px 2px 5px #666;-moz-box-shadow: 2px 2px 5px #666;}
-#user_comments textarea {width:550px;background-color:#fff;padding:4px;margin:5px 0 15px;border:1px solid #999;font-size: 1em;color:#333;display:block;}
-#user_comments label {display: block;margin:0 0;font-weight:700;font-size:0.9em;}
-#user_comments .show_comment_form {width:250px;margin:0 0 20px;padding:3px;color:#fff;background:#666;border:1px solid #000;text-align:center;border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;}
-#user_comments .show_comment_form a {color:#fff;} 
-#user_comments {width:550px;text-align:left;margin:25px 0 0;}
-#user_comments .data {color:#000;background-color:#eee;border:0px solid #ccc;padding:10px;margin:0 0 20px;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;box-shadow:2px 2px 2px #ccc;-webkit-box-shadow:2px 2px 2px #ccc;-moz-box-shadow: 2px 2px 2px #ccc;}
-#user_comments .data p {font-size:1em;color:#666;}
-#user_comments .when_who {color:#999;font-size:0.7em;}
-#user_comments .when_who a {color:#999;}
-#user_comments .bottom-post {margin:20px 0;border:none;border-top:6px dashed #eee;}
-#user_comments .box {color:#333; margin:0;width:644px;}
-#user_comments h6 {color:#666;margin:0 0 10px 0;padding:5px 0;font-weight:700;font-size:0.9em;}
-#user_comments img {margin:10px 0;display:block;}
-#user_comments form {padding:0 0 30px 0;margin:0 0 0 0;}				
-#user_comments fieldset {display: block;	margin: 0 0 0 0;padding:5px 0;border:none;} 
-#user_comments select {display: block;}
-#user_comments small {margin:0;color:#666;font-weight:400;display:block padding:3px 0;width:350px;clear:both;font-size:0.8em;}
-#user_comments .hidden {border:none;display:none;}
+
+
 /*-----------------------------------------------------------------------------------------------
 VISTA LISTA DETALLADA ARTICULOS 
 -----------------------------------------------------------------------------------------------*/
@@ -620,29 +599,7 @@ div.download_link a {color:#fff;}
 #related li a {font-size:0.8em;color:#666;font-weight:400;}
 #related li a:hover {color:#000;font-weight:700;}
 #attachments img, #related img, #comments img {padding:0 0 5px;margin:0;}
-/*-----------------------------------------------------------------------------------------------
-CONTACT
------------------------------------------------------------------------------------------------*/
-#contact {}
-#contact form {text-align:left;padding:0;margin:0;}
-#contact p {margin:0;padding:0 20px 0 0;float:left;}
-#contact input {width:245px;padding:4px;margin:0 0 5px;color:#333;display: block;}
-#contact .required {border:1px solid #999;}
-#id_captcha_1 {border:1px solid #999;} 
-#contact input.submit {color:#000;clear: both;margin:30px 0 0;}
-#contact label {margin:0;padding:5px 0 0;display:block;font-size:0.8em;font-weight:400;width:265px;}
-#contact textarea {width:530px;border:1px solid #999; padding:5px; margin-bottom:20px;}
-#id_cc_myself {display:inline;}
-#contact .nota {border-top:1px solid #ccc;font-style:italic;font-size:0.7em;padding:3px 0;width:30%;color:#999;}
-/*-----------------------------------------------------------------------------------------------
-MAP
------------------------------------------------------------------------------------------------*/
-#map {}
-#map ul {list-style:none;margin:0 0 10px 30px;padding:0;}
-#map ul li {background: transparent url(../images/css/carpeta-abierta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;font-weight:700;font-size:1em;}
-#map ul li ul {margin:10px 0 0;}
-#map li li {background: transparent url(../images/css/carpeta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;}
-#map ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
+
 /*-----------------------------------------------------------------------------------------------
 SEARCH
 -----------------------------------------------------------------------------------------------*/
@@ -661,15 +618,14 @@ SEARCH
 /*-----------------------------------------------------------------------------------------------
 EARTH
 -----------------------------------------------------------------------------------------------*/
-#earth {}
-#earth {color:#999999;font-size:0.75em; text-align:center; padding:10px 0;margin:0;}  
-#earth  a {color:#999999; text-decoration:none;}
-#earth  a:hover {color:#666666; text-decoration:none;}
-#earth  img {padding:10px 0 0;}
+.footer_global {border-top:2px solid #999;margin:30px 0 0 !important;background:#eee;.rounded-corners(0);}
+.footer_global {color:#666;font-size:0.9em; text-align:center; padding:10px 0;margin:0;}  
+.footer_global a {color:#ff6600; text-decoration:none;}
+.footer_global a:hover {color:#666666; text-decoration:none;}
+.footer_global img {padding:10px 0 0;}
 #logos {text-align:center;font-size: 0.7em;padding:1px 0 20px 0;margin:10px auto;}
 #logos img {padding:7px 0 0;}
 #footer_separator { clear:both; height:0;}
-.footer_global {border-top:2px dotted #eeeeee;margin:0;}
 .expand_collapse{font-weight:bold;clear:none;margin:0px;padding:0px;color:black;float:left;margin:0 4px 0 4px;cursor: pointer;}
 /*-----------------------------------------------------------------------------------------------
 jQuery lightBox plugin - Gallery style
