--- a/cyclope/templates/cyclope/themes/neutronix/base.html
+++ b/cyclope/templates/cyclope/themes/neutronix/base.html
@@ -16,11 +16,11 @@
 # Neutronix is developed by Santiago Hoerth Moura
  -->
 
-{% load layout i18n tagging_tags %}
-  
+{% load layout i18n tagging_tags cyclope_utils %}
+
 <html>
- 
- <head>
+
+<head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{% block title %}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}</title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
@@ -29,10 +29,10 @@
     {% block displaycss %}
     <link href="/media/cyclope/themes/neutronix/css/neutronix.less" rel="stylesheet/less" type="text/css"/>
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/cyclope.less" rel="stylesheet/less" type="text/css"/>
-    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/print.css" rel="stylesheet" type="text/css" media="print"/>    
+    <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/print.css" rel="stylesheet" type="text/css" media="print"/>
     <link href="{{ CYCLOPE_STATIC_URL }}js/lightbox/css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen"/>
     {%endblock%}
-    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less-1.3.0.min.js"></script>    
+    <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/less-1.3.0.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-1.5.1.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-ui-1.8.13.custom.min.js"></script>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/menuitems.js"></script>
@@ -56,50 +56,26 @@
     });
     </script>
     {% block extra_head %}{% endblock %}
-  </head>
+</head>
 
-  <body class="{% block body_class %}{%endblock%}">
+<body class="{% block body_class %}{%endblock%}">
 
 {% block page_header %}
 <div id="mask" class="container_24">
 {% region 'air' %}
-    <div class="brand">
-        <h1><a href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
-        <h2><a href="/">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}</a></h2>
-    </div>
-        <div class="clear"></div>
+  <div class="brand">
+    <h1><a href="/">{{ CYCLOPE_SITE_SETTINGS.global_title }}</a></h1>
+    <h2><a href="/">http://{{ CYCLOPE_SITE_SETTINGS.site.domain }}</a></h2>
+  </div>
+  <div class="clear"></div>
 {% endblock %}
 
-<div id="middling">{% block page_content %} {% endblock %}</div>
+  <div id="middling">{% block page_content %} {% endblock %}</div>
 
 {% block page_footer %}
-      <div id="footer_separator"></div>
-      <div class="footer_global">
-      {% region 'earth' %}
-      <span id="creativecommons">Los contenidos de este sitio web están bajo una
-        <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
-          Licencia Creative Commons BY-NC-ND
-        </a></span>.<br/>
-        <span id="codigo_sur">Tecnología: <a href="http://cyclope.codigosur.org">Cyclope 3 GPL</a>. Hecho por <a href="http://www.codigosur.org">Código Sur</a>.
-        </span><br/>
-        <span>Este sitio ha sido desarrollado sobre estándares de diseño web que cualquier navegador de calidad visualizará correctamente. </span><br/>
-
-        <img src="/media/uploads/images/banners/navegadores.png" width="246" height="36" border="0" usemap="#map-nav" alt="navegadores"/>
-        <map name="map-nav" id="map-nav">
-          <!-- #$-:Image map file created by GIMP Image Map plug-in -->
-          <!-- #$-:GIMP Image Map plug-in by Maurits Rijk -->
-          <!-- #$-:Please do not edit lines starting with "#$" -->
-          <!-- #$VERSION:2.3 -->
-          <!-- #$AUTHOR:sh -->
-          <area shape="rect" coords="48,1,85,35" alt="Konkeror" title="Konkeror" href="http://www.konqueror.org/" />
-          <area shape="rect" coords="6,1,41,35" alt="Mozilla Firefox" title="Mozilla Firefox" href="http://www.mozilla-europe.org/es/firefox/" />
-          <area shape="rect" coords="88,0,120,36" alt="Epiphany" title="Epiphany" href="http://projects.gnome.org/epiphany/" />
-          <area shape="rect" coords="126,1,158,35" alt="Opera" title="Opera" href="http://www.opera.com/download/" />
-          <area shape="rect" coords="162,3,199,34" alt="Safari" title="Safari" href="http://www.apple.com/es/safari/download/" />
-          <area shape="rect" coords="206,4,242,34" alt="Google Chrome" title="Google Chrome" href="http://www.google.com/chrome/index.html?hl=es" />
-        </map>
-        </div>
-    </div><!-- /end mask -->
+  {% join CYCLOPE_THEME_PREFIX "footer.html" as footer %}
+  {% include footer %}
+</div><!-- /end mask -->
 {% endblock %}
-  </body>
+</body>
 </html>
