--- a/cyclope/templates/cyclope/themes/cyportal/404.html
+++ b/cyclope/templates/cyclope/themes/cyportal/404.html
@@ -1,16 +1,1 @@
-{% load i18n %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% trans "Error 404 (Not Found)" %}</title>
-  </head>
-  <body>
-    <p>
-      <b>{% trans "Error 404" %}</b>
-    </p>
-    <p>
-      {% trans "The requested URL was not found on this server." %}
-    </p>
-  </body>
-</html>
+{% extends "cyclope/themes/neutronix/404.html" %}
