Some fixed in Diversia Theme

--- a/cyclope/media/themes/diversia/css/defaults.less
+++ b/cyclope/media/themes/diversia/css/defaults.less
@@ -60,6 +60,18 @@ ROUNDED CORNERS
   -webkit-border-bottom-right-radius:@value;
   }
 
+.rounded-corners-bottom-left(@value) {
+  border-bottom-left-radius: @value;
+  -moz-border-radius-bottomleft:@value;
+  -webkit-border-bottom-left-radius:@value;
+  }
+
+.rounded-corners-bottom-right(@value) {
+  border-bottom-right-radius: @value;
+  -moz-border-radius-bottomright:@value;
+  -webkit-border-bottom-right-radius:@value;
+  }
+
 /*-----------------------------
 GRADIENTS
 ------------------------------*/
