--- a/cyclope/media/themes/diversia/css/love.less
+++ b/cyclope/media/themes/diversia/css/love.less
@@ -25,6 +25,8 @@ LOVE
   margin-top:60px;
   .rounded-corners(6px);
   background:#f7f7f7;}
+.five_elements #love {
+  margin:450px 0 0;}
 
 #love .content-view {
   }
@@ -155,7 +157,9 @@ LOVE
   position:absolute;  
   margin:0 auto;
   background:url(../images/css/bordersC.png) no-repeat top right;
-  border:none !important;}
+  border:none !important;
+  .rounded-corners-bottom(0);
+  .rounded-corners-bottom-right(8px);}
 
 #love .category_title h1.title {
   }
