--- a/cyclope/media/themes/diversia/css/water.less
+++ b/cyclope/media/themes/diversia/css/water.less
@@ -19,20 +19,12 @@
 /*-----------------------------------------------------------------------------------------------
 WATER 
 -----------------------------------------------------------------------------------------------*/
-.five_elements #water {
+#water {
   position:absolute;
   top:110px;
   display:block;
   padding:0;
-  margin:30px 0 0;
-  clear:both;}
-
-.four_elements #water {
-  position:absolute;
-  top:110px;
-  display:block;
-  padding:0;
-  margin:30px 0 0;
+  margin:30px 0 0 5px;
   clear:both;}
   
 #water .content-view {}
@@ -190,7 +182,7 @@ TREE MENUS / COLLECTIONS
   z-index:30;
   padding:15px 0 0;
   margin:0 0 0;
-  background:url(../images/css/bordersA.png) no-repeat top left ;}
+  background:url(/media/cyclope/themes/diversia/images/css/bordersA.png) no-repeat top left ;}
 
 /* ### TITLES ### */
 
