--- a/cyclope/templates/cyclope/author_detail.html
+++ b/cyclope/templates/cyclope/author_detail.html
@@ -1,6 +1,6 @@
 {% extends host_template %}
 
-{% load comments i18n fb_versions cyclope_utils dbgettext_tags %}
+{% load i18n fb_versions cyclope_utils dbgettext_tags %}
 
 {% block content %}
 <div class="content-view author detail author-detail">
