--- a/cyclope/templates/cyclope/content_tools_block.html
+++ b/cyclope/templates/cyclope/content_tools_block.html
@@ -1,4 +1,4 @@
-{% load i18n comments obj_perms cyclope_utils abuse %}
+{% load i18n threadedcomments_tags obj_perms cyclope_utils abuse %}
   {% get_comment_count for current_object as comment_count %}
 
   <div class="tools meta-content">
