--- a/cyclope/templates/comments/form.html
+++ b/cyclope/templates/comments/form.html
@@ -1,30 +1,30 @@
 {% load comments i18n %}
 <form action="{% comment_form_target %}" method="post">{% csrf_token %}
   {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
+    {% if form.errors %}
+    <h6>{% blocktrans count form.errors|length as counter %}Please correct the error below{% plural %}Please correct the errors below{% endblocktrans %}</h6>
+    {% endif %}
   {% for field in form %}
     {% if field.is_hidden %}
       {{ field }}
     {% else %}
-      {% ifequal field.name "honeypot" %}
+      {% if field.errors %}<span>{{ field.errors }}</span>{% endif %}
+      {% if field.name == "honeypot" %}
         <div  style="display:none;">
           {{ field.label_tag }} {{ field }}
         </div>
-      {% else %}
-        {% if user.is_authenticated %}
-          {% ifequal field.name "comment" %}
+      {% elif field.name == "captcha" %}
+        {% if not user.is_authenticated %}
             {{ field.label_tag }}
-            {{ field }}
-          {% endifequal %}
-        {% else %}
-          {{ field.label_tag }}
-          {% ifequal field.name "captcha" %}
             <small>
               {% trans "For security reasons you need to type the text displayed in the following image" %}
             </small>
-          {% endifequal %}
+            {{ field }}
+         {% endif %}
+      {% else %}
+          {{ field.label_tag }}
           {{ field }}
-        {% endif %}
-      {% endifequal %}
+       {% endif %}
     {% endif %}
   {% endfor %}
   {% if user.is_authenticated %}
@@ -32,5 +32,6 @@
   {% endif %}
   <div class="submit action-content submit-comment">
     <input type="submit" name="post" class="submit" value="{% trans "Post your comment" %}" />
+    <a href="#c0" id="cancel_reply">{% trans "Cancel reply" %}</a>
   </div>
 </form>
