--- a/cyclope/templates/comments/preview.html
+++ b/cyclope/templates/comments/preview.html
@@ -4,34 +4,7 @@
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
 {% block content %}
-  {% load comments %}
-<div class="user_input">
-  <form action="{% comment_form_target %}" method="post">{% csrf_token %}
-    {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
-    {% if form.errors %}
-    <h6>{% blocktrans count form.errors|length as counter %}Please correct the error below{% plural %}Please correct the errors below{% endblocktrans %}</h6>
-    {% else %}
-    <h1>{% trans "Preview your comment" %}</h1>
-      <blockquote>{{ comment|linebreaks }}</blockquote>
-      <p>
-      {% trans "and" %} <input type="submit" name="submit" class="submit-post" value="{% trans "Post your comment" %}" id="submit" /> {% trans "or make changes" %}:
-      </p>
-    {% endif %}
-    {% for field in form %}
-      {% if field.is_hidden %}
-        {{ field }}
-      {% else %}
-        {% if field.errors %}<span>{{ field.errors }}</span>{% endif %}
-        <p
-          {% if field.errors %} class="error"{% endif %}
-          {% ifequal field.name "honeypot" %} style="display:none;"{% endifequal %}>
-          {{ field.label_tag }} {{ field }}
-        </p>
-      {% endif %}
-    {% endfor %}
-    <div class="submit action-content preview-comment">
-    <input type="submit" name="submit" class="submit" value="{% trans "Post" %}" />
-    </div>
-  </form>
+<div id="user_comments">
+    {% include "comments/form.html" %}
 </div>
 {% endblock %}
