--- a/cyclope/templates/cyclope/related_contents_block.html
+++ b/cyclope/templates/cyclope/related_contents_block.html
@@ -1,4 +1,4 @@
-{% load comments i18n cyclope_utils %}
+{% load i18n cyclope_utils %}
   {% if content_relations %}
   {% regroup content_relations by other_type as relations %}
   <div class="related_contents">
